services/kubernetes-dashboard/envs/developer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard
  labels:
    app.kubernetes.io/name: kubernetes-dashboard
spec:
  selector:
    app.kubernetes.io/name: kubernetes-dashboard
  ports:
    - port: 8090
      targetPort: http
      name: http
  type: NodePort
